Fix up spacing on following list

--- a/com/following.less
+++ b/com/following.less
@@ -1,6 +1,6 @@
 .following-list {
   display: grid;
   grid-template-columns: 1fr;
-  grid-gap: 10px;
-  margin-top: 10px;
+  grid-gap: 1px;
+  margin-top: 15px;
 }
